--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -40,4 +40,4 @@
           %li.listsRight__item.listsRight__item--login
             = link_to "ログイン", ""
           %li.listsRight__item.listsRight__item--new
-            = link_to "新規会員登録", ""
+            = link_to "新規会員登録", new_user_registration_path
