--- a/app/views/users/_leftcontent.html.haml
+++ b/app/views/users/_leftcontent.html.haml
@@ -13,7 +13,7 @@
         %span いいね！一覧
         = fa_icon "angle-right"
     %li
-      = link_to new_product_path do
+      = link_to new_item_path do
         %span 出品する
         = fa_icon "angle-right"
     %li
