--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -40,4 +40,4 @@
           %li.listsRight__item.listsRight__item--login
             = link_to "ログイン", new_user_session_path
           %li.listsRight__item.listsRight__item--new
-            = link_to "新規会員登録", step1_signup_index_path
+            = link_to "新規会員登録", sns_signup_index_path
