--- a/app/assets/stylesheets/_devise.scss
+++ b/app/assets/stylesheets/_devise.scss
@@ -54,6 +54,18 @@
             color: $white;
             text-decoration: none;
           }
+          .deviseBtn--red {
+            display: block;
+            height: 40px;
+            margin: 40px 0;
+            background: red;
+            text-align: center;
+            width: 320px;
+            font-size: 16px;
+            line-height: 40px;
+            color: $white;
+            text-decoration: none;
+          }
         }
       }
       .deviseForm {
