--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -4,7 +4,7 @@
     .inner
       %h2.title 商品の情報を入力
       .productForm
-        = form_for @product do |f|
+        = form_for @item do |f|
           .formSection
             = f.hidden_field :user_id, value: current_user.id
             .productForm__field.productForm__field--top
@@ -12,10 +12,23 @@
               %span.formRequired 必須
               %br/
               %p 最大4枚までアップロードできます
+              #select-item-images
+              - @item.images.each_with_index do |image,i|
+                -if image.image.url
+                  = image_tag image.image.url, class: "item-image__image"
+                    .item-image__buttons
+                      .item-image__buttons--edit
+                        編集
+                      .item-image__buttons--delete
+                        削除
+              
               %ul.formUploader
                 .uploadInfo
                   %p ドラッグアンドドロップ
                   %span またはクリックしてアップロード
+                  #image-box
+                    = f.fields_for :item_images do |image|
+                      = image.file_field :image,class: 'js-file'
           .formSection
             .productForm__field
               = f.label :商品名
@@ -35,11 +48,11 @@
                 = f.label :カテゴリー
                 %span.formRequired 必須
                 %br/
-                = f.collection_select(:size, [], :id , :name, {prompt: "---"}, {class: "inputField inputField__select", id: "category", required: true})
+                = f.collection_select(:category_id, [], :id , :name, {prompt: "---"}, {class: "inputField inputField__select", id: "category", required: true})
               .productForm__field
                 = f.label :ブランド
                 %br/
-                = f.text_field :size, placeholder: "例) ルイ ヴィトン"
+                = f.text_field :brand_id, placeholder: "例) ルイ ヴィトン"
               .resultLists
               .productForm__field
                 = f.label :商品の状態
@@ -58,17 +71,17 @@
                 = f.label :配送料の負担
                 %span.formRequired 必須
                 %br/
-                = f.select(:shipping_fee, [["送料込み（出品者負担）", 0], ["着払い（購入者負担）", 1]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.select(:shipping_burden, [["送料込み（出品者負担）", 0], ["着払い（購入者負担）", 1]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
               .productForm__field
                 = f.label :発送元の地域
                 %span.formRequired 必須
                 %br/
-                = f.collection_select(:price, [], :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.collection_select(:shipping_place, [], :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
               .productForm__field
                 = f.label :発送までの日数
                 %span.formRequired 必須
                 %br/
-                = f.select(:expected_date, [["1-2日で発送", 0], ["2-3日で発送", 1], ["4-7日で発送", 2]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.select(:shipping_day, [["1-2日で発送", 0], ["2-3日で発送", 1], ["4-7日で発送", 2]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
           .formSection
             .contentLeft
               %h3
@@ -109,4 +122,4 @@
             .productForm__actions
               = f.submit "出品する", class: "productBtn"
             = link_to "もどる", :back, class: "returnBtn"
-  = render "devise/shared/footer"
+          = render "devise/shared/footer"
