都道府県・商品状態作成

--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -12,23 +12,10 @@
               %span.formRequired 必須
               %br/
               %p 最大4枚までアップロードできます
-              #select-item-images
-              - @item.images.each_with_index do |image,i|
-                -if image.image.url
-                  = image_tag image.image.url, class: "item-image__image"
-                    .item-image__buttons
-                      .item-image__buttons--edit
-                        編集
-                      .item-image__buttons--delete
-                        削除
-              
               %ul.formUploader
                 .uploadInfo
                   %p ドラッグアンドドロップ
                   %span またはクリックしてアップロード
-                  #image-box
-                    = f.fields_for :item_images do |image|
-                      = image.file_field :image,class: 'js-file'
           .formSection
             .productForm__field
               = f.label :商品名
@@ -58,7 +45,8 @@
                 = f.label :商品の状態
                 %span.formRequired 必須
                 %br/
-                = f.select(:status, [["新品/未使用", 0], ["未使用に近い", 1], ["目立った傷や汚れなし", 2], ["やや傷や汚れあり", 3], ["傷や汚れあり", 4], ["状態が悪い", 5]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                -# = f.select(:status, [["新品/未使用", 0], ["未使用に近い", 1], ["目立った傷や汚れなし", 2], ["やや傷や汚れあり", 3], ["傷や汚れあり", 4], ["状態が悪い", 5]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.select:status, Item.statuses.keys, {prompt: "---"}, {class: "inputField inputField__select", required: true}
           .formSection
             .contentLeft
               %h3
@@ -71,17 +59,26 @@
                 = f.label :配送料の負担
                 %span.formRequired 必須
                 %br/
-                = f.select(:shipping_burden, [["送料込み（出品者負担）", 0], ["着払い（購入者負担）", 1]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                -# = f.select(:shipping_burden, [["送料込み（出品者負担）", 0], ["着払い（購入者負担）", 1]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.select:shipping_burden, Item.shipping_burdens.keys, {prompt: "---"}, {class: "inputField inputField__select", required: true}
+              .productForm__field
+                = f.label :配送の方法
+                %span.formRequired 必須
+                %br/
+                = f.select(:shipping_way, [["送料込み（出品者負担）", 0], ["着払い（購入者負担）", 1]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                -#= f.select:shipping_way, Item.shipping_burdens.keys, {prompt: "---"}, {class: "inputField inputField__select", required: true}
               .productForm__field
                 = f.label :発送元の地域
                 %span.formRequired 必須
                 %br/
-                = f.collection_select(:shipping_place, [], :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                -# = f.collection_select(:shipping_place, [], :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.collection_select :shipping_place, Prefecture.all, :id, :name, {prompt: "---"}, {class: "inputField inputField__select", required: true}
               .productForm__field
                 = f.label :発送までの日数
                 %span.formRequired 必須
                 %br/
-                = f.select(:shipping_day, [["1-2日で発送", 0], ["2-3日で発送", 1], ["4-7日で発送", 2]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                -# = f.select(:shipping_day, [["1-2日で発送", 0], ["2-3日で発送", 1], ["4-7日で発送", 2]], {prompt: "---"}, {class: "inputField inputField__select", required: true})
+                = f.select(:shipping_day, Item.shipping_days.keys, {prompt: "---"}, {class: "inputField inputField__select", required: true})
           .formSection
             .contentLeft
               %h3
@@ -122,4 +119,4 @@
             .productForm__actions
               = f.submit "出品する", class: "productBtn"
             = link_to "もどる", :back, class: "returnBtn"
-          = render "devise/shared/footer"
+  = render "devise/shared/footer"
