--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -44,7 +44,8 @@
                 = f.label :カテゴリー
                 %span.formRequired 必須
                 %br/
-                = f.collection_select :category_id, Category.all, :id, :name,{class: "inputField inputField__select", required: true}
+                .select-wrap
+                  = f.collection_select :category_id,Category.roots, :id, :name, {prompt: ""},{class: "inputField inputField__select category", required: true}
               .productForm__field
                 = f.label :ブランド
                 %br/
